@@ -5,7 +5,7 @@ PRE-0.44:
   - bmp - done
   - jpeg - done
   - tiff
-  - tga
+  - tga - done
   - rgb
   - png - done
   - gif - done
